Crash when rendering in Cycles #62087

Closed
opened 2019-03-01 15:34:29 +01:00 by Jack Schaberg · 6 comments

System Information
System Information
Operating system: Windows 10 Pro 10.0.16299 Build 16299
Graphics card: NVIDIA GeForce GTX 1070

Blender Version
Broken:

(example: Date: 2019-0301 10:14
Hash: e795dd4a20

Worked: (optional)

Short description of error
Blender crashes when trying to render image or animation
press F12 or Ctrl-F12 or choose render image or render animation from menu and program crashes.

Exact steps for others to reproduce the error
See above. It crashes as soon as I click F12 or Ctrl-F12.

Sorry about the large file.glass shatter_March 1.blend

NOTE: I tried a file created a few weeks ago and the program DOES NOT crash.

**System Information** **System Information** Operating system: Windows 10 Pro 10.0.16299 Build 16299 Graphics card: NVIDIA GeForce GTX 1070 **Blender Version** Broken: (example: Date: 2019-0301 10:14 Hash: e795dd4a20a1 Worked: (optional) **Short description of error** Blender crashes when trying to render image or animation press F12 or Ctrl-F12 or choose render image or render animation from menu and program crashes. **Exact steps for others to reproduce the error** See above. It crashes as soon as I click F12 or Ctrl-F12. Sorry about the large file.[glass shatter_March 1.blend](https://archive.blender.org/developer/F6736173/glass_shatter_March_1.blend) NOTE: I tried a file created a few weeks ago and the program DOES NOT crash.
Author

Added subscriber: @JaySchay

Added subscriber: @JaySchay

Added subscriber: @brecht

Added subscriber: @brecht
Sergey Sharybin was assigned by Brecht Van Lommel 2019-03-01 18:06:05 +01:00
BLI_assert failed: /home/brecht/dev/worktree/source/blender/blenkernel/intern/object_update.c:418, BKE_object_eval_eval_base_flags(), at 'view_layer->object_bases_array != ((void *)0)'

Thread 98 "blender" received signal SIGABRT, Aborted.
[Switching to Thread 0x7fffa5f78700 (LWP 82712)]
__GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
51	../sysdeps/unix/sysv/linux/raise.c: No such file or directory.
(gdb) bt
- 0  0x00007ffff6612e97 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
- 1  0x00007ffff6614801 in __GI_abort () at abort.c:79
- 2  0x000055555918d315 in BKE_object_eval_eval_base_flags (depsgraph=0x7fff87d6d208, scene=0x7fff87dae008, view_layer_index=0, object=0x7fff87dc6808, base_index=4, is_from_set=false) at /home/brecht/dev/worktree/source/blender/blenkernel/intern/object_update.c:418
- 3  0x00005555595ea318 in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*, Scene*&, int&, Object*&, int&, bool&>(std::__invoke_other, void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*&&, Scene*&, int&, Object*&, int&, bool&) (__f=
    @0x7fff87d5be70: 0x55555918d1cd <BKE_object_eval_eval_base_flags>, __args#0=@0x7fffa5f76590: 0x7fff87d6d208, __args#1=@0x7fff87d5be90: 0x7fff87dae008, __args#2=@0x7fff87d5be88: 0, __args#3=@0x7fff87d5be80: 0x7fff87dc6808, __args#4=@0x7fff87d5be7c: 4, __args#5=@0x7fff87d5be78: false)
    at /usr/include/c++/7/bits/invoke.h:60
#4  0x00005555595e8c70 in std::__invoke<void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*, Scene*&, int&, Object*&, int&, bool&>(void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*&&, Scene*&, int&, Object*&, int&, bool&) (__fn=
    @0x7fff87d5be70: 0x55555918d1cd <BKE_object_eval_eval_base_flags>, __args#0=@0x7fffa5f76590: 0x7fff87d6d208, __args#1=@0x7fff87d5be90: 0x7fff87dae008, __args#2=@0x7fff87d5be88: 0, __args#3=@0x7fff87d5be80: 0x7fff87dc6808, __args#4=@0x7fff87d5be7c: 4, __args#5=@0x7fff87d5be78: false)
    at /usr/include/c++/7/bits/invoke.h:95
- 5  0x00005555595e74dd in std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul, 4ul, 5ul>) (this=0x7fff87d5be70, __args=...) at /usr/include/c++/7/functional:467
- 6  0x00005555595e5276 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fff87d5be70, __args#0=@0x7fffa5f76590: 0x7fff87d6d208) at /usr/include/c++/7/functional:551
#7  0x00005555595e1e82 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffa5f76590: 0x7fff87d6d208)
    at /usr/include/c++/7/bits/std_function.h:316
- 8  0x00005555595fdbf5 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fff87e06240, __args#0=0x7fff87d6d208) at /usr/include/c++/7/bits/std_function.h:706
- 9  0x00005555595fd1d3 in DEG::deg_task_run_func(TaskPool*, void*, int) (pool=0x7fff2465bb48, taskdata=0x7fff87e061c8, thread_id=23) at /home/brecht/dev/worktree/source/blender/depsgraph/intern/eval/deg_eval.cc:88
- 10 0x00005555595b96fc in task_scheduler_thread_run (thread_p=0x7fffb15546d8) at /home/brecht/dev/worktree/source/blender/blenlib/intern/task.c:439
- 11 0x00007ffff7bbd6db in start_thread (arg=0x7fffa5f78700) at pthread_create.c:463
#12 0x00007ffff66f588f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
``` BLI_assert failed: /home/brecht/dev/worktree/source/blender/blenkernel/intern/object_update.c:418, BKE_object_eval_eval_base_flags(), at 'view_layer->object_bases_array != ((void *)0)' Thread 98 "blender" received signal SIGABRT, Aborted. [Switching to Thread 0x7fffa5f78700 (LWP 82712)] __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51 51 ../sysdeps/unix/sysv/linux/raise.c: No such file or directory. (gdb) bt - 0 0x00007ffff6612e97 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51 - 1 0x00007ffff6614801 in __GI_abort () at abort.c:79 - 2 0x000055555918d315 in BKE_object_eval_eval_base_flags (depsgraph=0x7fff87d6d208, scene=0x7fff87dae008, view_layer_index=0, object=0x7fff87dc6808, base_index=4, is_from_set=false) at /home/brecht/dev/worktree/source/blender/blenkernel/intern/object_update.c:418 - 3 0x00005555595ea318 in std::__invoke_impl<void, void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*, Scene*&, int&, Object*&, int&, bool&>(std::__invoke_other, void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*&&, Scene*&, int&, Object*&, int&, bool&) (__f= @0x7fff87d5be70: 0x55555918d1cd <BKE_object_eval_eval_base_flags>, __args#0=@0x7fffa5f76590: 0x7fff87d6d208, __args#1=@0x7fff87d5be90: 0x7fff87dae008, __args#2=@0x7fff87d5be88: 0, __args#3=@0x7fff87d5be80: 0x7fff87dc6808, __args#4=@0x7fff87d5be7c: 4, __args#5=@0x7fff87d5be78: false) at /usr/include/c++/7/bits/invoke.h:60 #4 0x00005555595e8c70 in std::__invoke<void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*, Scene*&, int&, Object*&, int&, bool&>(void (*&)(Depsgraph*, Scene*, int, Object*, int, bool), Depsgraph*&&, Scene*&, int&, Object*&, int&, bool&) (__fn= @0x7fff87d5be70: 0x55555918d1cd <BKE_object_eval_eval_base_flags>, __args#0=@0x7fffa5f76590: 0x7fff87d6d208, __args#1=@0x7fff87d5be90: 0x7fff87dae008, __args#2=@0x7fff87d5be88: 0, __args#3=@0x7fff87d5be80: 0x7fff87dc6808, __args#4=@0x7fff87d5be7c: 4, __args#5=@0x7fff87d5be78: false) at /usr/include/c++/7/bits/invoke.h:95 - 5 0x00005555595e74dd in std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)>::__call<void, Depsgraph*&&, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul>(std::tuple<Depsgraph*&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul, 4ul, 5ul>) (this=0x7fff87d5be70, __args=...) at /usr/include/c++/7/functional:467 - 6 0x00005555595e5276 in std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)>::operator()<Depsgraph*, void>(Depsgraph*&&) (this=0x7fff87d5be70, __args#0=@0x7fffa5f76590: 0x7fff87d6d208) at /usr/include/c++/7/functional:551 #7 0x00005555595e1e82 in std::_Function_handler<void (Depsgraph*), std::_Bind<void (*(std::_Placeholder<1>, Scene*, int, Object*, int, bool))(Depsgraph*, Scene*, int, Object*, int, bool)> >::_M_invoke(std::_Any_data const&, Depsgraph*&&) (__functor=..., __args#0=@0x7fffa5f76590: 0x7fff87d6d208) at /usr/include/c++/7/bits/std_function.h:316 - 8 0x00005555595fdbf5 in std::function<void (Depsgraph*)>::operator()(Depsgraph*) const (this=0x7fff87e06240, __args#0=0x7fff87d6d208) at /usr/include/c++/7/bits/std_function.h:706 - 9 0x00005555595fd1d3 in DEG::deg_task_run_func(TaskPool*, void*, int) (pool=0x7fff2465bb48, taskdata=0x7fff87e061c8, thread_id=23) at /home/brecht/dev/worktree/source/blender/depsgraph/intern/eval/deg_eval.cc:88 - 10 0x00005555595b96fc in task_scheduler_thread_run (thread_p=0x7fffb15546d8) at /home/brecht/dev/worktree/source/blender/blenlib/intern/task.c:439 - 11 0x00007ffff7bbd6db in start_thread (arg=0x7fffa5f78700) at pthread_create.c:463 #12 0x00007ffff66f588f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95 ```

This issue was referenced by d16386e50b

This issue was referenced by d16386e50bc104f9446a30e041a7b74f38b51ae9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks, Sergey!

Thanks, Sergey!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62087
No description provided.