source/blender/depsgraph/intern/depsgraph_tag.cc
@@ -603,8 +603,11 @@ void graph_id_tag_update(Main *bmain,
 		       update_source_as_string(update_source));
 	}
 	IDNode *id_node = (graph != NULL) ? graph->find_id_node(id)
-	                                      : NULL;
-	DEG_id_type_tag(bmain, GS(id->name));
+	                                  : NULL;
+	if (graph != NULL) {
+		DEG_graph_id_type_tag(reinterpret_cast<::Depsgraph*>(graph),
+		                      GS(id->name));
+	}
 	if (flag == 0) {
 		deg_graph_node_tag_zero(bmain, graph, id_node, update_source);
 	}
@@ -680,20 +683,24 @@ void DEG_graph_id_tag_update(struct Main *bmain,
 }
 
 /* Mark a particular datablock type as having changing. */
-void DEG_id_type_tag(Main *bmain, short id_type)
+void DEG_graph_id_type_tag(Depsgraph *depsgraph, short id_type)
 {
 	if (id_type == ID_NT) {
 		/* Stupid workaround so parent datablocks of nested nodetree get looped
 		 * over when we loop over tagged datablock types. */
-		DEG_id_type_tag(bmain, ID_MA);
-		DEG_id_type_tag(bmain, ID_TE);
-		DEG_id_type_tag(bmain, ID_LA);
-		DEG_id_type_tag(bmain, ID_WO);
-		DEG_id_type_tag(bmain, ID_SCE);
+		DEG_graph_id_type_tag(depsgraph, ID_MA);
+		DEG_graph_id_type_tag(depsgraph, ID_TE);
+		DEG_graph_id_type_tag(depsgraph, ID_LA);
+		DEG_graph_id_type_tag(depsgraph, ID_WO);
+		DEG_graph_id_type_tag(depsgraph, ID_SCE);
 	}
+	const int id_type_index = BKE_idcode_to_index(id_type);
+	DEG::Depsgraph *deg_graph = reinterpret_cast<DEG::Depsgraph *>(depsgraph);
+	deg_graph->id_type_updated[id_type_index] = 1;
+}
 
-	int id_type_index = BKE_idcode_to_index(id_type);
-
+void DEG_id_type_tag(Main *bmain, short id_type)
+{
 	LISTBASE_FOREACH (Scene *, scene, &bmain->scene) {
 		LISTBASE_FOREACH (ViewLayer *, view_layer, &scene->view_layers) {
 			Depsgraph *depsgraph =
@@ -701,8 +708,7 @@ void DEG_id_type_tag(Main *bmain, short id_type)
 			                                             view_layer,
 			                                             false);
 			if (depsgraph != NULL) {
-				DEG::Depsgraph *deg_graph = reinterpret_cast<DEG::Depsgraph *>(depsgraph);
-				deg_graph->id_type_updated[id_type_index] = 1;
+				DEG_graph_id_type_tag(depsgraph, id_type);
 			}
 		}
 	}
